init all rounds and seeds